fix: enhance small screen handling and improve visibility messages

--- a/src/client/css/critical.css
+++ b/src/client/css/critical.css
@@ -130,6 +130,10 @@ tr:last-child {
 
 }
 
+#noacc{
+    overflow: auto;
+}
+
 @media (max-width: 399px){
     #noacc{
         display: block !important;
